--- a/package.json
+++ b/package.json
@@ -31,16 +31,18 @@
   "homepage": "https://github.com/jonasdamher/PoesiaEventual_API#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "fs": "0.0.1-security",
     "generate-password": "^1.6.0",
+    "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "rate-limiter-flexible": "^2.2.1"
   }
 }
