UPDATE: remove nodemon, remove console.log

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "API para obtener poesía en español usando mongoDB.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -40,7 +38,6 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
-    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "rate-limiter-flexible": "^2.2.1"
