--- a/package.json
+++ b/package.json
@@ -13,14 +13,8 @@
   },
   "keywords": [
     "Poesía",
-    "en",
-    "español",
-    "API",
     "poems",
-    "API",
-    "poems",
-    "in",
-    "spanish"
+    "API"
   ],
   "author": "jonasdamher",
   "license": "ISC",
