--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
+    "nodemailer": "^6.6.2",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "rate-limiter-flexible": "^2.2.1"
   },
@@ -47,7 +49,9 @@
     "@types/express": "^4.17.12",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^15.12.2",
+    "@types/nodemailer": "^6.4.2",
     "@types/passport": "^1.0.6",
+    "@types/passport-google-oauth20": "^2.0.8",
     "@types/passport-jwt": "^3.0.5",
     "typescript": "^4.3.2"
   }
