--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "API para obtener poesía en español usando mongoDB.",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/server.js",
-    "build": "tsc"
+    "start": "node ./dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -27,19 +26,10 @@
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "joi": "^17.4.0",
     "mongoose": "^5.12.3",
     "rate-limiter-flexible": "^2.2.1"
-  },
-  "devDependencies": {
-    "@types/compression": "^1.7.0",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.12",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^15.12.2",
-    "typescript": "^4.3.2"
   }
 }
