--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/server.js",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jonasdamher/PoesiaEventual_API.git"
   },
   "keywords": [
+    "PoesíaEventual",
     "API",
     "Poesía",
     "Poems",
@@ -25,21 +27,57 @@
   },
   "homepage": "https://github.com/jonasdamher/PoesiaEventual_API#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "mongodb": "^3.6.9",
     "mongoose": "^5.12.3",
+    "nodemailer": "^6.6.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "pino": "^6.11.3",
     "rate-limiter-flexible": "^2.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.24",
+    "@types/mongodb": "^3.6.19",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^15.12.2",
+    "@types/nodemailer": "^6.4.2",
+    "@types/passport": "^1.0.6",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/pino": "^6.3.8",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.0.6",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/__tests__/*.+(ts|js)"
+    ]
   }
 }
