--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./dist/server.js",
     "build": "tsc",
     "test": "jest",
-    "docker":"docker build -t jonasdamher/poesiaeventual_api ."
+    "docker": "docker build -t jonasdamher/poesiaeventual_api ."
   },
   "repository": {
     "type": "git",
@@ -61,25 +61,9 @@
     "@types/passport-jwt": "^3.0.9",
     "@types/supertest": "^2.0.12",
     "jest": "^29.6.1",
+    "mongodb-memory-server": "^8.13.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
-    },
-    "globals": {
-      "ts-jest": {
-        "tsConfigFile": "tsconfig.json"
-      }
-    },
-    "testMatch": [
-      "**/__tests__/*.+(ts|js)"
-    ]
   }
 }
