--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "node ./dist/server.js",
+    "dev" : "nodemon ./src/server.ts",
     "build": "tsc",
     "test": "jest",
     "docker": "docker build -t jonasdamher/poesiaeventual_api ."
@@ -62,8 +63,10 @@
     "@types/supertest": "^2.0.12",
     "jest": "^29.6.1",
     "mongodb-memory-server": "^8.13.0",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
 }
