--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "node ./dist/server.js",
-    "dev" : "nodemon ./src/server.ts",
+    "dev": "nodemon ./src/server.ts",
     "build": "tsc",
     "test": "jest",
-    "docker": "docker build -t jonasdamher/poesiaeventual_api ."
+    "docker": "docker build -t jonasdamher/poesiaeventual_api .",
+    "lint": "eslint ./src/**",
+    "lint:fix": "eslint ./src/** --fix"
   },
   "repository": {
     "type": "git",
@@ -61,6 +63,9 @@
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.9",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.44.0",
     "jest": "^29.6.1",
     "mongodb-memory-server": "^8.13.0",
     "nodemon": "^3.0.1",
