--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "API para obtener poesía en español.",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node ./dist/server.js",
-    "dev": "nodemon ./src/server.ts",
+    "start": "cross-env NODE_ENV=PRODUCTION node ./dist/server.js",
+    "dev": "cross-env NODE_ENV=DEVELOPMENT nodemon ./src/server.ts",
     "build": "tsc",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest --verbose",
     "docker": "docker build -t jonasdamher/poesiaeventual_api:2.0.0 .",
     "lint": "eslint ./src/**",
     "lint:fix": "eslint ./src/** --fix"
@@ -67,6 +67,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.44.0",
     "jest": "^29.6.1",
     "mongodb-memory-server": "^8.13.0",
