--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=PRODUCTION node ./dist/server.js",
     "dev": "cross-env NODE_ENV=DEVELOPMENT nodemon ./src/server.ts",
     "build": "tsc",
-    "test": "cross-env NODE_ENV=test jest --verbose",
+    "test": "cross-env NODE_ENV=test jest --coverage",
     "docker": "docker build -t jonasdamher/poesiaeventual_api:2.0.0 .",
     "lint": "eslint ./src/**",
     "lint:fix": "eslint ./src/** --fix"
